# permissive-read-lock

./: .rustfmt.toml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: lib.rs
