[package]
name = "permissive-read-lock"
version = "0.1.0"
edition = "2024"
authors = ["Joe Kale <joe@zetier.com>"]
description = "Minimal lock wrapper for multiple concurrent readers and an optional lock-free unsafe read path."
readme = "README.md"
repository = "https://github.com/jkalez/permissive-read-lock"
homepage = "https://github.com/jkalez/permissive-read-lock"
documentation = "https://docs.rs/permissive-read-lock"
license = "MIT OR Apache-2.0"
keywords = ["lock", "read", "synchronization"]

[dependencies]
parking_lot = "0.12"
